Tighten up some of the drag state machine logic https://bugs.webkit.org/show_bug.cgi?id=206798

Reviewed by Wenson Hsieh.

* page/EventHandler.h: Added shouldDispatchEventsToDragSourceElement function and renamed
the existing dispatchDragSrcEvent function to dispatchEventToDragSourceElement.

* page/EventHandler.cpp:
(WebCore::EventHandler::updateDragAndDrop): Call the renamed dispatchEventToDragSourceElement
unconditionally, since it now has the smarts to only dispatch an event when we are supposed to.
(WebCore::EventHandler::cancelDragAndDrop): Ditto.
(WebCore::EventHandler::dragSourceEndedAt): Call the new shouldDispatchEventsToDragSourceElement
function because of the null check it does for dataTransfer, before calling setDestinationOperation
on the dataTransfer, since there isn't an obvious ironclad guarantee we might be here without an
actual drag fully in process and a dataTransfer object allocated. Also call the renamed
dispatchEventToDragSourceElement by its new name.
(WebCore::EventHandler::shouldDispatchDragSourceEvents): Added. Checks thre three conditions that
affect whether we should dispatch events to the drag source. First that there is a drag source.
Second that there is a dataTransfer object, indicating that we got far enough in the logic to
actually start a drag. Third that shouldDispatchEvents is true, indicating this is the type of
drag that should be visible to the website content and so events should be dispatched.
(WebCore::EventHandler::dispatchEventToDragSourceElement): Call shouldDispatchDragSourceEvents
before dispatching the event, so that callers don't all have to do that check.

Canonical link: https://commits.webkit.org/219792@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255128 268f45cc-cd09-0410-ab3c-d52691b4dbfc